RESOLVED FIXED 214178
[WPE][GTK4] Form controls are not painted when using threaded rendering
https://bugs.webkit.org/show_bug.cgi?id=214178
Summary [WPE][GTK4] Form controls are not painted when using threaded rendering
Carlos Garcia Campos
Reported 2020-07-10 02:16:17 PDT
Which is the default for GTK4 since r263888. The problem is that RenderTheme::paint() returns early if the given GraphicsContext doesn't have a platform context, assuming all RenderTheme implementations paint directly to the platform context.
Attachments
Patch (5.01 KB, patch)
2020-07-10 02:19 PDT, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2020-07-10 02:19:31 PDT
Carlos Garcia Campos
Comment 2 2020-07-13 05:17:12 PDT
Note You need to log in before you can comment on or make changes to this bug.