Source/WebCore/rendering/RenderThemeCocoa.h
@@ -39,6 +39,7 @@ public:
     virtual CFStringRef contentSizeCategory() const = 0;
 
 private:
+    bool canPaint(const PaintInfo&) const final;
     bool shouldHaveCapsLockIndicator(const HTMLInputElement&) const final;
 
 #if ENABLE(APPLE_PAY)
