Source/WebCore/rendering/RenderThemeCocoa.mm
@@ -54,6 +54,11 @@ RenderThemeCocoa& RenderThemeCocoa::singleton()
     return static_cast<RenderThemeCocoa&>(RenderTheme::singleton());
 }
 
+bool RenderThemeCocoa::canPaint(const PaintInfo& paintInfo) const
+{
+    return paintInfo.context().hasPlatformContext();
+}
+
 bool RenderThemeCocoa::shouldHaveCapsLockIndicator(const HTMLInputElement& element) const
 {
     return element.isPasswordField();
