Source/WebCore/rendering/RenderThemePlayStation.h
@@ -34,6 +34,8 @@ public:
     friend NeverDestroyed<RenderThemePlayStation>;
 
 private:
+    bool canPaint(const PaintInfo&) const final { return true; }
+
     void updateCachedSystemFontDescription(CSSValueID systemFontID, FontCascadeDescription&) const final;
 };
 
